--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ requires = [
 build-backend = "setuptools.build_meta"
 
 [tool.cibuildwheel]
-build = ["cp37-*", "cp39-*", "cp38-*", "cp310-*"]
+build = ["cp37-*", "cp39-*", "cp38-*", "cp310-*", "cp311-*"]
 build-verbosity = 1
 build-frontend = "build"
 test-command = ""
@@ -23,7 +23,6 @@ before-all = [
 ]
 repair-wheel-command = "auditwheel show {wheel} && auditwheel repair --lib-sdir .libs -w {dest_dir} {wheel}"
 environment = { SKBUILD_CONFIGURE_OPTIONS="-DBUILD_TESTING:BOOL=FALSE" }
-
 
 #[[tool.cibuildwheel.overrides]]
 #select = "*-musllinux*"
