--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -6,8 +6,8 @@ on:
     branches: [main]
   pull_request:
     branches: [main]
-  schedule:
-    - cron: "17 3 * * 0"
+  # schedule:
+  #   - cron: "17 3 * * 0"
 
 jobs:
   build_wheels:
@@ -52,7 +52,7 @@ jobs:
     needs: [build_wheels, build_sdist]
     runs-on: ubuntu-latest
     # upload to PyPI on every tag starting with 'v'
-    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')
+    # if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')
 
     steps:
       - uses: actions/setup-python@v4
