--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@
 cmake_minimum_required(VERSION 3.20)
 
 # Set project name and version
-project(pyClesperanto VERSION "0.6.0")
+project(pyClesperanto) # VERSION "0.6.2")
 
 # Compilation tag for CLIc library linking
 if (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
