--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,8 +13,8 @@ build = ["cp37-*", "cp39-*", "cp38-*", "cp310-*", "cp311-*"]
 build-frontend = "build"
 build-verbosity = 1
 test-command = ""
-# test-requires = ["numpy", "pytest"]
-# test-command = "pytest {project}/tests"
+test-command = "pytest {project}/tests"
+test-requires = ["numpy", "pytest"]
 
 [tool.cibuildwheel.linux]
 before-all = [
