--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -6,8 +6,8 @@ on:
     branches: [main]
   pull_request:
     branches: [main]
-  release:
-    types: [published]
+  # release:
+  #   types: [published]
   # schedule:
   #   - cron: "17 3 * * 0"
 
