--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,17 +1,42 @@
 [build-system]
-requires = [
-    "setuptools>=42",
-    "wheel",
-    "scikit-build",
-    "cmake>=3.20",
-    "ninja",
-    "pybind11>=2.6",
-    "numpy",
-    "matplotlib",
-    "toolz",
-]
 build-backend = "setuptools.build_meta"
+requires = [
+  "setuptools",
+  "wheel",
+  "scikit-build>=0.15.0",
+  "cmake>=3.20",
+  "pybind11>=2.10.0",
+]
 
-[tool.pytest.ini_options]
-testpaths = ["tests"]
-addopts= "-v --cov=./ --cov-report=xml"
+[tool.cibuildwheel]
+build = ["cp37-*", "cp39-*", "cp38-*", "cp310-*", "cp311-*"]
+build-frontend = "build"
+build-verbosity = 1
+test-command = "pytest {project}/tests"
+test-requires = ["numpy", "pytest"]
+
+[tool.cibuildwheel.linux]
+before-all = [
+  "yum install -y ruby",
+  "bash {package}/scripts/build-opencl-linux.sh",
+]
+environment = {SKBUILD_CONFIGURE_OPTIONS = "-DBUILD_TESTING:BOOL=FALSE"}
+repair-wheel-command = "auditwheel show {wheel} && auditwheel repair --lib-sdir .libs -w {dest_dir} {wheel}"
+skip = ["cp27-*", "cp36-*", "pp*", "*-musllinux*"]
+
+#[[tool.cibuildwheel.overrides]]
+#select = "*-musllinux*"
+#before-all = [
+#    "apk add ruby",
+#    "bash {package}/scripts/build-ocl.sh",
+#]
+
+[tool.cibuildwheel.windows]
+before-all = "bash {package}/scripts/build-opencl-windows.sh"
+environment = {SKBUILD_CONFIGURE_OPTIONS = "-DOpenCL_LIBRARY:FILEPATH='C:/Program Files/OpenCL-ICD-Loader/lib/OpenCL.lib' -DOpenCL_LIBRARIES:FILEPATH='C:/Program Files/OpenCL-ICD-Loader/lib/OpenCL.lib' -DOpenCL_FOUND:BOOL=TRUE -DBUILD_TESTING:BOOL=FALSE"}
+skip = ["cp27-*", "cp36-*", "pp*", "*-win32"]
+
+[tool.cibuildwheel.macos]
+before-all = "bash {package}/scripts/build-opencl-macos.sh"
+environment = {SKBUILD_CONFIGURE_OPTIONS = "-DBUILD_TESTING:BOOL=FALSE"}
+skip = ["cp27-*", "cp36-*", "pp*", "*_universal2"]
