--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -6,6 +6,8 @@ on:
     branches: [main]
   pull_request:
     branches: [main]
+  release:
+    types: [published]
 
 jobs:
   build_wheels:
@@ -50,8 +52,9 @@ jobs:
     needs: [build_wheels, build_sdist]
     runs-on: ubuntu-latest
     # upload to PyPI on every tag starting with 'v'
-    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')
-
+    # if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')
+    # upload to PyPI on release event
+    if: github.event_name == 'release'
     steps:
       - uses: actions/setup-python@v4
         with:
