--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -27,6 +27,7 @@ jobs:
         uses: pypa/cibuildwheel@v2.11.2
         env:
           CIBW_ARCHS_MACOS: x86_64 arm64
+          CIBW_TEST_SKIP: *-macosx_arm64
 
       - uses: actions/upload-artifact@v3
         with:
