--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -19,13 +19,13 @@ jobs:
         os: [ubuntu-latest, macos-latest, windows-latest]
 
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v3
 
       - name: Build wheels
         uses: pypa/cibuildwheel@v2.11.2
         env:
           CIBW_ARCHS_MACOS: x86_64 arm64
-          CIBW_TEST_SKIP: *-macosx_arm64
 
       - uses: actions/upload-artifact@v3
         with:
@@ -35,7 +35,8 @@ jobs:
     name: Build source distribution
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v3
 
       - name: Build sdist
         run: pipx run build --sdist
