--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,7 +47,7 @@ jobs:
  
       - name: Compile
         shell: bash -l {0}
-        run: pip install --verbose .
+        run: pip install . -vvv
 
       - name: Test
         shell: bash -l {0}
