Back to previous CI

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,12 +47,5 @@ jobs:
  
       - name: Compile
         shell: bash -l {0}
-        run: pip install . -vvv
-
-      - name: Test
-        shell: bash -l {0}
-        run: pytest -v --cov=./ --cov-report=xml
-
-      # - name: Coverage
-      #   uses: codecov/codecov-action@v1
+        run: pip install -e . -vvv
 
