--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,7 +47,9 @@ jobs:
 
       - name: Define environment variables
         shell: bash -l {0}
-        run: export SKBUILD_CONFIGURATION_OPTIONS="-DOpenCL_LIBRARY=$CONDA_PREFIX/lib/libOpenCL.so"
+        run: | 
+          export SKBUILD_CONFIGURE_OPTIONS="-DOpenCL_LIBRARY=$CONDA_PREFIX/lib/libOpenCL.so"
+          echo $SKBUILD_CONFIGURE_OPTIONS
  
       - name: Compile
         shell: bash -l {0}
