--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -57,9 +57,8 @@ jobs:
           export SKBUILD_CONFIGURE_OPTIONS="-DOpenCL_LIBRARY=$CONDA_PREFIX/lib/libOpenCL.so"
           echo $SKBUILD_CONFIGURE_OPTIONS
           pip install . -vvv
-          pytest -v --cov=./ --cov-report=xml
 
-      # - name: Test
-      #   shell: bash -l {0}
-      #   run: pytest -v --cov=./ --cov-report=xml
+      - name: Test
+        shell: bash -l {0}
+        run: python -m pytest tests/ -v --cov=./ --cov-report=xml
 
