--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -58,7 +58,7 @@ jobs:
           echo $SKBUILD_CONFIGURE_OPTIONS
           pip install . -vvv
 
-      - name: Test
-        shell: bash -l {0}
-        run: python -m pytest tests/ -v --cov=./ --cov-report=xml
+      # - name: Test
+      #   shell: bash -l {0}
+      #   run: python -m pytest tests/ -v --cov=./ --cov-report=xml
 
