--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build
+name: CI
 
 on:
   push:
@@ -16,7 +16,7 @@ jobs:
       fail-fast: false
       max-parallel: 3
       matrix:
-        python-version: ["3.7", "3.8", "3.9", "3.10"]
+        python-version: ["3.10"]
         platform: [ubuntu-latest] #, windows-latest, macos-latest] 
 
     steps:
@@ -39,13 +39,14 @@ jobs:
         shell: bash -l {0}
         run: conda install -y pocl
 
-      - name: Install dependencies
-        shell: bash -l {0}
-        run: |
-          python --version
-          conda install -y scikit-build cmake numpy setuptools pytest pytest-cov pytest-benchmark
- 
       - name: Compile
         shell: bash -l {0}
-        run: pip install -e . -vvv
+        run: |
+          export SKBUILD_CONFIGURE_OPTIONS="-DOpenCL_LIBRARY=$CONDA_PREFIX/lib/libOpenCL.so"
+          pip install .[test] -vvv
+      
+      - name: Test
+        shell: bash -l {0}
+        run: |
+          pytest -v
 
