--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ build = ["cp37-*", "cp39-*", "cp38-*", "cp310-*", "cp311-*"]
 build-frontend = "build"
 build-verbosity = 1
 test-command = "pytest {project}/tests"
-test-requires = ["numpy", "pytest"]
+test-requires = ["numpy", "pytest", "pytest-cov", "pytest-benchmark"]
 
 [tool.cibuildwheel.linux]
 before-all = [
