--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,6 +39,10 @@ jobs:
         shell: bash -l {0}
         run: conda install -y pocl
 
+      - name: Install tests dependencies
+        shell: bash -l {0}
+        run: conda install -y numpy pytest pytest-cov pytest-benchmark
+
       - name: Compile
         shell: bash -l {0}
         run: |
