--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,11 +46,9 @@ jobs:
       - name: Compile
         shell: bash -l {0}
         run: |
-          pip install . --install-option="-- -DOpenCL_LIBRARY=$CONDA_PREFIX/lib/libOpenCL.so" -vvv
-          
-      - name: Test
-        shell: bash -l {0}
-        run: pytest -v --cov=./ --cov-report=xml
+          export SKBUILD_CONFIGURE_OPTIONS="-DOpenCL_LIBRARY=$CONDA_PREFIX/lib/libpocl.so"
+          pip install .[test] -vvv
+          pytest -v
       
           
 
