--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,16 +11,12 @@ set(CMAKE_BUILD_TYPE Release)
 string(TOLOWER ${PROJECT_NAME} PY_PACKAGE_NAME)
 set(CY_PACKAGE_NAME _${PY_PACKAGE_NAME})
 
-message(STATUS "Package: ${PY_PACKAGE_NAME}")
-message(STATUS "C++ Module: ${CY_PACKAGE_NAME}")
-
 # Compilation tag for CLIc library linking for UNIX
 if (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC")
   set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fPIC")
 endif()
-# set(CMAKE_CXX_STANDARD 17) # Use C++17
-set(CMAKE_CXX_STANDARD_REQUIRED ON) # Require (at least) it
+
 
 # find python dev library
 # look for python in virtual env or conda first before checking the system.
@@ -33,41 +29,19 @@ if(Python3_Development.Embed_FOUND)
     message(STATUS "Python Developement Embed found")
 endif()
 
-message(STATUS "LIB DIR : ${CMAKE_PREFIX_PATH}/lib/")
 find_package(OpenCL REQUIRED)
-message(STATUS "OpenCL_LIBRARY 11: ${OpenCL_LIBRARY}")
-
-# message(STATUS "OpenCL_FOUND: ${OpenCL_FOUND}")
-# message(STATUS "OpenCL_LIBRARY: ${OpenCL_LIBRARY}")
-# message(STATUS "OpenCL_LIBRARIES: ${OpenCL_LIBRARIES}")
-# CMake Warning:
-#   Manually-specified variables were not used by the project:
-#     PYTHON_INCLUDE_DIR
-#     PYTHON_LIBRARY
-#     PYTHON_VERSION_STRING
-#     Python_EXECUTABLE
-#     Python_INCLUDE_DIR
-#     Python_LIBRARY
+message(STATUS "OpenCL_LIBRARY: ${OpenCL_LIBRARY}")
 
 ## fetch CLIc using CMake FetchContent
 include(FetchContent)
-
-# ! how can we define the latest version, what happen if empty?
-# if(NOT CLIC_VERSION) # if not set, use latest
-#   set(CLIC_VERSION "0.6.2" CACHE PATH "CLIc version tag")
-# endif()
-
-# avoid build tests and examples for convenience
 option(BUILD_TESTING  OFF)
-# fetch CLIc library
+option(BUILD_BENCHMARK  OFF)
 FetchContent_Declare(
   CLIc_lib 
   GIT_REPOSITORY https://github.com/clEsperanto/CLIc_prototype.git
   GIT_TAG ${CLIC_VERSION}
 )
 FetchContent_MakeAvailable(CLIc_lib)
-# Define CLIc Backend library
-# add_subdirectory(CLIc)
 
 if(SKBUILD)
   # Scikit-Build does not add your site-packages to the search path
@@ -85,7 +59,6 @@ set(WRAPPER_DIR ${CMAKE_CURRENT_SOURCE_DIR}/wrapper)
 file(GLOB_RECURSE WRAPPER_SOURCES_FILES ${WRAPPER_DIR}/*.cpp)
 
 find_package(pybind11 CONFIG REQUIRED)
-
 pybind11_add_module(${CY_PACKAGE_NAME} MODULE ${WRAPPER_SOURCES_FILES})
 
 target_link_libraries(${CY_PACKAGE_NAME} PRIVATE CLIc::CLIc ${OpenCL_LIBRARY})
@@ -94,7 +67,7 @@ target_include_directories(${CY_PACKAGE_NAME} PUBLIC "$<BUILD_INTERFACE:${WRAPPE
 target_compile_features(${CY_PACKAGE_NAME} PRIVATE cxx_std_17)
 
 set_property(TARGET ${CY_PACKAGE_NAME} APPEND PROPERTY
-  ENVIRONMENT LD_LIBRARY_PATH="${CMAKE_PREFIX_PATH}/lib/:${LD_LIBRARY_PATH}")
+  ENVIRONMENT LD_LIBRARY_PATH="${CMAKE_PREFIX_PATH}/lib:${LD_LIBRARY_PATH}")
 
 # Installing the extension module to the root of the package
 install(TARGETS ${CY_PACKAGE_NAME} DESTINATION .)
