remove unecessary cmake options

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,6 @@ before-all = [
   "yum install -y ruby",
   "bash {package}/scripts/build-opencl-linux.sh",
 ]
-environment = {SKBUILD_CONFIGURE_OPTIONS = "-DBUILD_TESTING:BOOL=FALSE"}
 repair-wheel-command = "auditwheel show {wheel} && auditwheel repair --lib-sdir .libs -w {dest_dir} {wheel}"
 skip = ["cp27-*", "cp36-*", "pp*", "*-musllinux*"]
 
@@ -39,10 +38,9 @@ skip = ["cp27-*", "cp36-*", "pp*", "*-musllinux*"]
 
 [tool.cibuildwheel.windows]
 before-all = "bash {package}/scripts/build-opencl-windows.sh"
-environment = {SKBUILD_CONFIGURE_OPTIONS = "-DOpenCL_LIBRARY:FILEPATH='C:/Program Files/OpenCL-ICD-Loader/lib/OpenCL.lib' -DOpenCL_LIBRARIES:FILEPATH='C:/Program Files/OpenCL-ICD-Loader/lib/OpenCL.lib' -DOpenCL_FOUND:BOOL=TRUE -DBUILD_TESTING:BOOL=FALSE"}
+environment = {SKBUILD_CONFIGURE_OPTIONS = "-DOpenCL_LIBRARY:FILEPATH='C:/Program Files/OpenCL-ICD-Loader/lib/OpenCL.lib' -DOpenCL_LIBRARIES:FILEPATH='C:/Program Files/OpenCL-ICD-Loader/lib/OpenCL.lib' -DOpenCL_FOUND:BOOL=TRUE"}
 skip = ["cp27-*", "cp36-*", "pp*", "*-win32"]
 
 [tool.cibuildwheel.macos]
 before-all = "bash {package}/scripts/build-opencl-macos.sh"
-environment = {SKBUILD_CONFIGURE_OPTIONS = "-DBUILD_TESTING:BOOL=FALSE"}
 skip = ["cp27-*", "cp36-*", "pp*", "*_universal2"]
