--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,7 +35,7 @@ jobs:
         shell: bash -l {0}
         run: conda info
 
-      - name: Install scikit-build
+      - name: Install dependencies
         shell: bash -l {0}
         run: pip install scikit-build pytest pytest-cov pytest-benchmark
 
@@ -43,31 +43,14 @@ jobs:
         shell: bash -l {0}
         run: conda install -y pocl
 
-      # - name: Install tests dependencies
-      #   shell: bash -l {0}
-      #   run: conda install -y numpy pytest pytest-cov pytest-benchmark
-
       - name: Compile
         shell: bash -l {0}
         run: |
           pip install . -vvv
-      
-      # export SKBUILD_CONFIGURE_OPTIONS="-DCMAKE_PREFIX_PATH=$CONDA_PREFIX -DBUILD_BENCHMARK=OFF -DBUILD_TESTING=OFF"
-      
+
       - name: Tests
         shell: bash -l {0}
         run: |
           pytest -v
-
-      # export LD_LIBRARY_PATH=$CONDA_PREFIX/lib:$LD_LIBRARY_PATH
-
-      # echo CONDA_PREFIX=$CONDA_PREFIX
-      # echo "ldd libOpenCL.so"
-      # ldd $CONDA_PREFIX/lib/libOpenCL.so
-      # echo "ldd libOpenCL.so.1"
-      # ldd $CONDA_PREFIX/lib/libOpenCL.so.1
-      # echo "ldd _pyclesperanto.so"
-      # ldd ./_skbuild/linux-x86_64-3.10/setuptools/lib.linux-x86_64-cpython-310/pyclesperanto/_pyclesperanto.cpython-310-x86_64-linux-gnu.so
-      
-          
+        
 
