--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -1,4 +1,4 @@
-name: CI
+name: Tests
 
 on:
   push:
@@ -51,7 +51,7 @@ jobs:
       - name: Tests
         shell: bash -l {0}
         run: |
-          pytest -v -v --cov=./ --cov-report=xml
+          pytest -v --cov=./ --cov-report=xml
 
       - name: Coverage
         uses: codecov/codecov-action@v3
