--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,10 +5,11 @@
 
 version: 2
 updates:
-  - package-ecosystem: "github-actions" # See documentation for possible values
-    directory: "/" # Location of package manifests
+  - package-ecosystem: "github-actions"
+    directory: "/"
     schedule:
       interval: "weekly"
+    version: "~major.minor"
   
   # - package-ecosystem: "gitsubmodule" # See documentation for possible values
   #   directory: "/" # Location of package manifests
