--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,6 @@ testpaths = [
 build = ["cp37-*", "cp38-*", "cp39-*", "cp310-*", "cp311-*"]
 build-frontend = "build"
 build-verbosity = 1
-macos_min_version = "10.10"
 test-command = "pytest {project}/tests/test_import.py"
 test-requires = ["numpy", "pytest", "pytest-cov", "pytest-benchmark"]
 
@@ -44,4 +43,5 @@ skip = ["cp27-*", "cp36-*", "pp*", "*-win32"]
 
 [tool.cibuildwheel.macos]
 before-all = "bash {package}/scripts/build-opencl-macos.sh"
+macos-deployment-target = "10.10"
 skip = ["cp27-*", "cp36-*", "pp*", "*_universal2"]
