--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -56,7 +56,7 @@ jobs:
     # upload to PyPI on every tag starting with 'v'
     # if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')
     # upload to PyPI on release event
-    if: github.event_name == 'release'
+    if: github.event_name == 'release' && github.event.action == 'created'
     steps:
       - uses: actions/setup-python@v4
         with:
