--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -59,5 +59,9 @@ jobs:
 
       - name: Coverage
         uses: codecov/codecov-action@v3
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }} # not required for public repos
+          files: ${{ runner.workspace }}/coverage.xml
+          fail_ci_if_error: true # optional (default = false)
         
 
