--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -61,7 +61,7 @@ jobs:
         uses: codecov/codecov-action@v3
         with:
           token: ${{ secrets.CODECOV_TOKEN }} # not required for public repos
-          files: ${{ runner.workspace }}/coverage.xml
+          files: ./coverage.xml
           fail_ci_if_error: true # optional (default = false)
         
 
