--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -21,7 +21,7 @@ jobs:
       max-parallel: 3
       matrix:
         python-version: ["3.10"]
-        platform: [ubuntu-latest] #, windows-latest, macos-latest] 
+        platform: [ubuntu-latest, windows-latest] #, macos-latest] 
 
     steps:
       - name: Checkout
