--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,8 +37,8 @@ option(BUILD_TESTING  OFF)
 option(BUILD_BENCHMARK  OFF)
 FetchContent_Declare(
   CLIc_lib 
-  GIT_REPOSITORY https://github.com/clEsperanto/MultiBackends.git
-  GIT_TAG fit-arch-to-clic
+  GIT_REPOSITORY https://github.com/clEsperanto/CLIc_prototype.git
+  GIT_TAG add-cuda-backend
 )
 FetchContent_MakeAvailable(CLIc_lib)
 
